Fix display bug on safari due to inline-block in title

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -979,7 +979,6 @@
 	padding: 15px 10px 15px 10px;
 	margin: 0;
 	font-size: 2.6em;
-	display: inline-block;
 }
 
 #me {
